[tool.poetry]
name = "nimbus"
version = "0.1.0"
description = ""
authors = ["Brianna Witherell"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.8.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
